--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,3 +5,12 @@
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
 
+# Set deep sleep times to 30 minutes 
+CONFIG_ZMK_SLEEP = y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+
+# Make Bluetooth stronger 
+CONFIG_BT_CTRL_TX_PWR_PLUS_8=y
+
+# Change the board name 
+CONFIG_ZMK_KEYBOARD_NAME="CodeCorne"
