--- a/config/corne.conf
+++ b/config/corne.conf
@@ -13,4 +13,4 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 CONFIG_BT_CTRL_TX_PWR_PLUS_8=y
 
 # Change the board name 
-# CONFIG_ZMK_KEYBOARD_NAME="CodeCorne"
+CONFIG_ZMK_KEYBOARD_NAME="CodeCorne"
