Removed all new modifications

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,11 +6,11 @@
 CONFIG_ZMK_DISPLAY=y
 
 # Set deep sleep times to 30 minutes 
-CONFIG_ZMK_SLEEP = y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+# CONFIG_ZMK_SLEEP = y
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 # Make Bluetooth stronger 
-CONFIG_BT_CTRL_TX_PWR_PLUS_8=y
+# CONFIG_BT_CTRL_TX_PWR_PLUS_8=y
 
 # Change the board name 
-CONFIG_ZMK_KEYBOARD_NAME="CodeCorne"
+# CONFIG_ZMK_KEYBOARD_NAME="CodeCorne"
